method 3 almost finished

--- a/phase3/testing.ipynb
+++ b/phase3/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -170,19 +170,19 @@
        "4       10   U  Pacific/Port_Moresby  airport  OurAirports  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "airports = pd.read_csv('../downloads/airports.csv')\n",
-    "airports.head()"
+    "airports_df = pd.read_csv('../downloads/airports.csv')\n",
+    "airports_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -215,12 +215,12 @@
     }
    ],
    "source": [
-    "airports.info()"
+    "airports_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4                 OVB                   4078       NaN      0       CR2  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "[368 rows x 10 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,13 +580,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 67663 entries, 0 to 67662\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column                  Non-Null Count  Dtype \n",
+      "---  ------                  --------------  ----- \n",
+      " 0   index                   67663 non-null  int64 \n",
+      " 1   Airline                 67663 non-null  object\n",
+      " 2   Airline ID              67663 non-null  object\n",
+      " 3   Source airport          67663 non-null  object\n",
+      " 4   Source airport ID       67663 non-null  object\n",
+      " 5   Destination airport     67663 non-null  object\n",
+      " 6   Destination airport ID  67663 non-null  object\n",
+      " 7   Codeshare               14597 non-null  object\n",
+      " 8   Stops                   67663 non-null  int64 \n",
+      " 9   Equipment               67645 non-null  object\n",
+      "dtypes: int64(2), object(8)\n",
+      "memory usage: 5.2+ MB\n"
+     ]
+    }
+   ],
    "source": [
-    "def method2(airport, internal = False):\n",
+    "routes.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Germany'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Access the value of country of the airport \"MUC\" from the airports_df DataFrame\n",
+    "airports_df[airports_df[\"IATA\"] == \"MUC\"][\"Country\"]\n",
+    "\n",
+    "# Access the value of country of the airport \"MUC\" from the airports_df DataFrame\n",
+    "airports_df[airports_df[\"IATA\"] == \"MUC\"][\"Country\"].values[0]\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'source_country' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43msource_country\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGermany\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIts Germany\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'source_country' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if source_country == \"Germany\":\n",
+    "    print(\"Its Germany\")"
    ]
   }
  ],
