--- a/phase3/testing.ipynb
+++ b/phase3/testing.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -342,19 +342,19 @@
        "4                 OVB                   4078       NaN      0       CR2  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "routes = pd.read_csv('../downloads/routes.csv')\n",
-    "routes.head()"
+    "routes_df = pd.read_csv('../downloads/routes.csv')\n",
+    "routes_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,94 +569,114 @@
        "[368 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "routes[routes[\"Source airport\"] == \"MUC\"]"
+    "routes_df[routes_df[\"Source airport\"] == \"MUC\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def method3(airport, internal=False):\n",
+    "    \"\"\"Develop a third method that receives an airport as an input and an optional argument called internal \n",
+    "        with a value of False by default. If internal is True, then this method should plot only the flights \n",
+    "        leaving this airport with a destination in the same country. Otherwise, it plots all flights.\"\"\"\n",
+    "\n",
+    "    all_routes = routes_df[routes_df['Source airport'] == airport]\n",
+    "\n",
+    "    if internal == False:\n",
+    "        print(all_routes)\n",
+    "\n",
+    "    if internal == True:\n",
+    "        \n",
+    "        source_country = airports_df[airports_df[\"IATA\"] == airport][\"Country\"].values[0]\n",
+    "        print(source_country)\n",
+    "\n",
+    "        airports_source_country = airports_df[airports_df[\"Country\"] == source_country][\"IATA\"].values\n",
+    "        #print(airports_source_country)\n",
+    "\n",
+    "        destination_source_country = all_routes[all_routes[\"Destination airport\"].isin(airports_source_country)]\n",
+    "        print(destination_source_country)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 67663 entries, 0 to 67662\n",
-      "Data columns (total 10 columns):\n",
-      " #   Column                  Non-Null Count  Dtype \n",
-      "---  ------                  --------------  ----- \n",
-      " 0   index                   67663 non-null  int64 \n",
-      " 1   Airline                 67663 non-null  object\n",
-      " 2   Airline ID              67663 non-null  object\n",
-      " 3   Source airport          67663 non-null  object\n",
-      " 4   Source airport ID       67663 non-null  object\n",
-      " 5   Destination airport     67663 non-null  object\n",
-      " 6   Destination airport ID  67663 non-null  object\n",
-      " 7   Codeshare               14597 non-null  object\n",
-      " 8   Stops                   67663 non-null  int64 \n",
-      " 9   Equipment               67645 non-null  object\n",
-      "dtypes: int64(2), object(8)\n",
-      "memory usage: 5.2+ MB\n"
+      "Germany\n",
+      "      index Airline Airline ID Source airport Source airport ID  \\\n",
+      "419     419      3L       2916            DUS               345   \n",
+      "1371   1371      4U       2548            DUS               345   \n",
+      "1374   1374      4U       2548            DUS               345   \n",
+      "1378   1378      4U       2548            DUS               345   \n",
+      "1384   1384      4U       2548            DUS               345   \n",
+      "\n",
+      "     Destination airport Destination airport ID Codeshare  Stops Equipment  \n",
+      "419                  FDH                    382       NaN      0       DH3  \n",
+      "1371                 DRS                    338       NaN      0   319 CRJ  \n",
+      "1374                 HDF                   5557       NaN      0       CRJ  \n",
+      "1378                 LEJ                    348       NaN      0       CRJ  \n",
+      "1384                 NUE                    347       NaN      0       CRJ  \n"
      ]
     }
    ],
    "source": [
-    "routes.info()"
+    "method3(\"DUS\",True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Germany'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Access the value of country of the airport \"MUC\" from the airports_df DataFrame\n",
-    "airports_df[airports_df[\"IATA\"] == \"MUC\"][\"Country\"]\n",
+    "def method4(country_input = None):\n",
+    "    \"\"\"Develop a fourth method that may receive a string with a country or a list of country strings \n",
+    "        but has None by default. This method should plot the N most used airplane models by number of routes. \n",
+    "        If the input argument is None it should plot for all dataset. If it receives only a country or list of \n",
+    "        countries, it should plot just for that subset.\"\"\" \n",
+    "    \n",
+    "    \n",
     "\n",
-    "# Access the value of country of the airport \"MUC\" from the airports_df DataFrame\n",
-    "airports_df[airports_df[\"IATA\"] == \"MUC\"][\"Country\"].values[0]\n",
     "\n",
-    "    "
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    if country_input != None:\n",
+    "        print(\"is not none\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'source_country' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43msource_country\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mGermany\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIts Germany\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'source_country' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "is not none\n"
      ]
     }
    ],
    "source": [
-    "if source_country == \"Germany\":\n",
-    "    print(\"Its Germany\")"
+    "method4(1)"
    ]
   }
  ],
