--- a/phase3/testing.ipynb
+++ b/phase3/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
        "4       10   U  Pacific/Port_Moresby  airport  OurAirports  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4                 OVB                   4078       NaN      0       CR2  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "[368 rows x 10 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -617,19 +617,65 @@
      "output_type": "stream",
      "text": [
       "Germany\n",
-      "      index Airline Airline ID Source airport Source airport ID  \\\n",
-      "419     419      3L       2916            DUS               345   \n",
-      "1371   1371      4U       2548            DUS               345   \n",
-      "1374   1374      4U       2548            DUS               345   \n",
-      "1378   1378      4U       2548            DUS               345   \n",
-      "1384   1384      4U       2548            DUS               345   \n",
+      "       index Airline Airline ID Source airport Source airport ID  \\\n",
+      "419      419      3L       2916            DUS               345   \n",
+      "1371    1371      4U       2548            DUS               345   \n",
+      "1374    1374      4U       2548            DUS               345   \n",
+      "1378    1378      4U       2548            DUS               345   \n",
+      "1384    1384      4U       2548            DUS               345   \n",
+      "7160    7160      AB        214            DUS               345   \n",
+      "7167    7167      AB        214            DUS               345   \n",
+      "7168    7168      AB        214            DUS               345   \n",
+      "7183    7183      AB        214            DUS               345   \n",
+      "7188    7188      AB        214            DUS               345   \n",
+      "7205    7205      AB        214            DUS               345   \n",
+      "7209    7209      AB        214            DUS               345   \n",
+      "23760  23760      ET       2220            DUS               345   \n",
+      "31257  31257      HU       2660            DUS               345   \n",
+      "38136  38136      LH       3320            DUS               345   \n",
+      "38140  38140      LH       3320            DUS               345   \n",
+      "38146  38146      LH       3320            DUS               345   \n",
+      "38157  38157      LH       3320            DUS               345   \n",
       "\n",
-      "     Destination airport Destination airport ID Codeshare  Stops Equipment  \n",
-      "419                  FDH                    382       NaN      0       DH3  \n",
-      "1371                 DRS                    338       NaN      0   319 CRJ  \n",
-      "1374                 HDF                   5557       NaN      0       CRJ  \n",
-      "1378                 LEJ                    348       NaN      0       CRJ  \n",
-      "1384                 NUE                    347       NaN      0       CRJ  \n"
+      "      Destination airport Destination airport ID Codeshare  Stops  \\\n",
+      "419                   FDH                    382       NaN      0   \n",
+      "1371                  DRS                    338       NaN      0   \n",
+      "1374                  HDF                   5557       NaN      0   \n",
+      "1378                  LEJ                    348       NaN      0   \n",
+      "1384                  NUE                    347       NaN      0   \n",
+      "7160                  DRS                    338       NaN      0   \n",
+      "7167                  GWT                    410       NaN      0   \n",
+      "7168                  HAM                    342       NaN      0   \n",
+      "7183                  MUC                    346       NaN      0   \n",
+      "7188                  NUE                    347       NaN      0   \n",
+      "7205                  STR                    350       NaN      0   \n",
+      "7209                  TXL                    351       NaN      0   \n",
+      "23760                 FRA                    340         Y      0   \n",
+      "31257                 TXL                    351       NaN      0   \n",
+      "38136                 FRA                    340       NaN      0   \n",
+      "38140                 HAM                    342       NaN      0   \n",
+      "38146                 MUC                    346       NaN      0   \n",
+      "38157                 TXL                    351       NaN      0   \n",
+      "\n",
+      "                     Equipment  \n",
+      "419                        DH3  \n",
+      "1371                   319 CRJ  \n",
+      "1374                       CRJ  \n",
+      "1378                       CRJ  \n",
+      "1384                       CRJ  \n",
+      "7160               DH4 319 73G  \n",
+      "7167           DH4 319 738 320  \n",
+      "7168           320 319 DH4 738  \n",
+      "7183       320 738 319 321 DH4  \n",
+      "7188                       DH4  \n",
+      "7205                       DH4  \n",
+      "7209   738 319 320 73G 321 DH4  \n",
+      "23760              319 320 321  \n",
+      "31257              738 320 73G  \n",
+      "38136      319 320 CR7 E90 321  \n",
+      "38140                  320 319  \n",
+      "38146              321 320 319  \n",
+      "38157              320 319 CR9  \n"
      ]
     }
    ],
@@ -639,7 +685,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CR2', 'A81', 'AN4', ..., '737 777 320', '330 747 777 737',\n",
+       "       'BE1 BEH'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "routes_df[\"Equipment\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_df[\"Equipment\"] = routes_df[\"Equipment\"].astype(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(routes_df[\"Equipment\"].iloc[110])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "routes_df = pd.read_csv('../downloads/routes.csv')\n",
+    "\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,34 +756,83 @@
     "        If the input argument is None it should plot for all dataset. If it receives only a country or list of \n",
     "        countries, it should plot just for that subset.\"\"\" \n",
     "    \n",
-    "    \n",
+    "    string_filter = isinstance(country_input, str)\n",
+    "    string_list_filter = isinstance(country_input, list) and all(isinstance(x, str) for x in country_input)\n",
     "\n",
+    "    try:\n",
+    "        assert string_filter == True \n",
+    "        print(\"Tried the assert\")      \n",
+    "    except:\n",
+    "        assert string_list_filter == True or country_input == None\n",
+    "        print(\"Tried the exepct assert\")\n",
     "\n",
+    "    routes_df[\"Equipment\"] = routes_df[\"Equipment\"].astype(str)\n",
+    "    routes_df[\"Equipment\"] = routes_df[\"Equipment\"].dropna()\n",
     "\n",
+    "    if string_filter == True:\n",
+    "        country_input = [country_input]\n",
     "\n",
+    "    if country_input == None:\n",
+    "        country_input = airports_df[\"Country\"].unique()\n",
     "\n",
+    "    equipment_list = []\n",
     "\n",
+    "    for country in country_input:\n",
+    "        print(country)\n",
     "\n",
+    "        target_country = airports_df[airports_df[\"Country\"] == country]\n",
     "\n",
-    "    if country_input != None:\n",
-    "        print(\"is not none\")\n"
+    "        airports_target_country = target_country[\"IATA\"].values\n",
+    "\n",
+    "        routes_target_country = routes_df[routes_df[\"Source airport\"].isin(airports_target_country)]\n",
+    "\n",
+    "        routes_target_country['Equipment'] = routes_target_country['Equipment'].str.split()\n",
+    "        exploded_df = routes_target_country.explode('Equipment')\n",
+    "\n",
+    "        exploded_list = exploded_df[\"Equipment\"].to_list()\n",
+    "\n",
+    "        equipment_list += exploded_list\n",
+    "\n",
+    "    equipment_series = pd.Series(equipment_list)\n",
+    "    print(equipment_series.value_counts().head())\n",
+    "\n",
+    "    return equipment_series\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "is not none\n"
+      "Tried the assert\n",
+      "Germany\n",
+      "320    595\n",
+      "319    588\n",
+      "738    437\n",
+      "321    290\n",
+      "73H    144\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/q8/420_prn108s38dq0t1r701080000gn/T/ipykernel_24207/3681057181.py:37: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  routes_target_country['Equipment'] = routes_target_country['Equipment'].str.split()\n"
      ]
     }
    ],
    "source": [
-    "method4(1)"
+    "d = method4(\"Germany\")"
    ]
   }
  ],
