cleaned data_loader, distance_calculator, flight_analyzer and showcase

--- a/main_directory/showcase.ipynb
+++ b/main_directory/showcase.ipynb
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Library for analyzing flight data\"\"\"\n",
     "import pandas as pd\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -26,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" Load the data \"\"\"\n",
     "airlines_df = pd.read_csv('downloads/airlines.csv')\n",
     "airports_df = pd.read_csv('downloads/airports.csv')\n",
     "routes_df = pd.read_csv('downloads/routes.csv')\n",
@@ -38,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"Instance of the class from flight_analyzer.py\"\"\"\n",
     "FA = FlightAnalyzer(airlines_df=airlines_df, airports_df=airports_df, routes_df=routes_df, airplanes_df=airplanes_df)"
    ]
   },
@@ -72,7 +75,6 @@
    ],
    "source": [
     "# Show all airports in Germany\n",
-    "\n",
     "FA.method1(country_name=\"Germany\")"
    ]
   },
@@ -104,6 +106,7 @@
     }
    ],
    "source": [
+    "# Distribution of flight distances\n",
     "FA.method2()"
    ]
   },
@@ -145,7 +148,6 @@
    ],
    "source": [
     "# Show all domestic flights from Frankfurt Airport\n",
-    "\n",
     "FA.method3(airport=\"FRA\", internal=True)"
    ]
   },
@@ -167,7 +169,6 @@
    ],
    "source": [
     "# Show all international flights from Frankfurt Airport\n",
-    "\n",
     "FA.method3(airport=\"FRA\", internal=False)"
    ]
   },
@@ -198,7 +199,6 @@
    ],
    "source": [
     "# N is number of top airplanes to be displayed\n",
-    "\n",
     "N = 10\n",
     "FA.method4(N=N, country_input = \"Germany\")"
    ]
@@ -230,7 +230,6 @@
    ],
    "source": [
     "# Show all domestic flights for Germany\n",
-    "\n",
     "FA.method5(country_name=\"Germany\", internal=True)"
    ]
   },
@@ -252,7 +251,6 @@
    ],
    "source": [
     "# Show all international flights for Germany\n",
-    "\n",
     "FA.method5(country_name=\"Germany\", internal=False)"
    ]
   }
